<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="32dp"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    tools:context=".Home"
    >

    <EditText
        android:id="@+id/post_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Post_box_text"
        android:textSize="18sp"
        android:inputType="textShortMessage"
        />

    <Button
        android:id="@+id/post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Post_button_text"
        android:layout_gravity="end"
        android:layout_marginBottom="8dp"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/meesages_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messages_name"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <ListView
        android:id="@+id/messages_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>